--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ Last Updated September 21, 2016
           <div class="row column bit-12">
                   <div class="row column bit-3">
                       <div class="logo"></div>
-                    <!-- TODO insert logo art here -->
+
                   </div>
-                  <div class="row column bit-4 menu">
+                  <div class="row column bit-3 menu">
                       <ul>
                         <li><a href="#">News &amp; Media</a></li>
                         <li><a href="#">Artists</a></li>
@@ -75,11 +75,9 @@ Last Updated September 21, 2016
           <div class="placeholder-btn">Buy Tickets</div>
 
           <div class="social-media-svg">
-            <!-- TODO insert social media svg icons here -->
+
           </div>
 
-          <!-- TODO Insert day/hour counter -->
-          <!-- TODO insert arrow down indicator -->
 
     </div><!-- close hero section tag -->
 
@@ -99,7 +97,7 @@ Last Updated September 21, 2016
               <h2 class="column">News &amp; Media</h2>
 
               <!-- #1 Visual Artist of the Week Card -->
-              <div class="bit-4 column"><!-- card containers -->
+              <div class="bit-1-3-3 column"><!-- card containers -->
 
                   <div class="news-card">
                       <!--image container -->
@@ -135,7 +133,7 @@ Last Updated September 21, 2016
 
 
               <!-- #2 Simpsons & Steve Cutts Card -->
-              <div class="bit-4 column"><!-- card containers -->
+              <div class="bit-1-3-3 column"><!-- card containers -->
                   <div class="news-card">
 
 
@@ -166,7 +164,7 @@ Last Updated September 21, 2016
               </div>
 
               <!-- DRIVE RADIO -->
-              <div class="bit-4 column"><!-- card containers -->
+              <div class="bit-1-3-3 column"><!-- card containers -->
                   <div class="news-card">
 
 
