--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@ Running list;
 
 
   <!-- ======================   HEADER   =========================== -->
-    <div class="row column header"><!-- hero wrapper -->
+    <div class="row header"><!-- hero wrapper -->
 
           <div class="row column nav-bar"><!-- NAV container -->
 
             <!-- small 1/12(12), medium, large 1/9(12) -->
                   <div class="logo"></div>
 
-                  <div class="menu bit-3"><!-- bit-3 = 25% -->
+                  <div class="menu"><!-- bit-3 = 25% -->
+                    <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
                       <ul>
                         <li><a href="#">News &amp; Media</a></li>
                         <li><a href="#">Artists</a></li>
@@ -78,7 +79,7 @@ Running list;
           <div class="row column display-text">
 
                   <h1>The Outrunners</h1>
-                  <h3>The World's First Synthwave Music Festival</h3>
+                  <h4>The World's First Synthwave Music Festival</h4>
                   <div class="btn bit-3"><h5>Buy Tickets</h5></div><!-- can the text dictate the sz of the button? -->
 
                   <div class="social-media-svg"></div>
@@ -187,7 +188,7 @@ Running list;
 
                           <div class="limit">
                                 <p>Get the Outrunners Festival Mobile App for artist stage times and line-ups, connect with staff and friends
-                                and contests now.</p><!-- TODO Change Copy Here -->
+                                and contests now.</p>
                           </div>
 
                           <div >
@@ -207,11 +208,13 @@ Running list;
 
 
   <!-- ======================   Line-up   =========================== -->
-        <div id="Line-up" class="container"><!-- line-up container -->
 
-                <div class="headliner-logo">Miami Nights 1984</div>
-                <div class="headliner-logo">The Outrunners</div>
-                <div class="headliner-logo">Kazinsky</div>
+        <div class="row full-wrap"><!-- line-up container -->
+          <!-- TODO prefer img vs css background-img ? -->
+
+                <div class="bit-1-3-3 h-m84">Miami Nights 1984</div>
+                <div class="bit-1-3-3 h-out">The Outrunners</div>
+                <div class="bit-1-3-3 h-kaz">Kazinsky</div>
 
                 <div class="artist-logo">LazerHawk</div>
                 <div class="artist-logo">Com Truise</div>
