--- a/index.html
+++ b/index.html
@@ -13,48 +13,32 @@ Last Updated September 21, 2016
 
 -->
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
-<!--
-Running list;
+      <head>
 
-*** improve CSS organization.
+          <!-- fonts go here -->
+          <link rel="stylesheet" type="text/css" href="style/MyFontsWebfontsKit.css">
+          <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
-* convert menu to hamburger (never done before)
-* Design logo responsiveness with actual logo. img or svg?
-* format banner text
-* Add CTA to banner
-* Format artists into grid (look at masonry grid?)
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
--->
+          <!-- populate -->
+          <title>Outrunners Music Festival</title>
+          <meta name="description" content="The Outrunners music festival celebrates this culture, and showcases the world’s leading Dj’s and Musicians that have devoted their efforts to forwarding the genre with cutting, synthesizer fueled tracks. ">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+          <!-- stylesheets used -->
+          <link rel="stylesheet" href="style/all.css">
 
-<head>
-
-    <!-- fonts go here -->
-    <link rel="stylesheet" type="text/css" href="style/MyFontsWebfontsKit.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <!-- populate -->
-    <title>Outrunners Music Festival</title>
-    <meta name="description" content="The Outrunners music festival celebrates this culture, and showcases the world’s leading Dj’s and Musicians that have devoted their efforts to forwarding the genre with cutting, synthesizer fueled tracks. ">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-    <!-- stylesheets used -->
-    <link rel="stylesheet" href="style/all.css">
-
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-</head>
+          <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+      </head>
 
 
 
 <body>
-<div id="page"><!-- contain entire page -->
-
 
   <!-- ======================   HEADER   =========================== -->
     <div class="row header"><!-- hero wrapper -->
@@ -80,7 +64,8 @@ Running list;
 
                   <h1>The Outrunners</h1>
                   <h4>The World's First Synthwave Music Festival</h4>
-                  <div class="btn bit-3"><h5>Buy Tickets</h5></div><!-- can the text dictate the sz of the button? -->
+
+                  <div class="btn bit-3"><h5>Buy Tickets</h5></div>
 
                   <div class="social-media-svg"></div>
           </div><!-- close display-text-->
@@ -92,8 +77,13 @@ Running list;
 
 
 
+<!--
+   ____  ___ _      _______   ____ ___  ___  ____/ (_)___ _
+  / __ \/ _ \ | /| / / ___/  / __ `__ \/ _ \/ __  / / __ `/
+ / / / /  __/ |/ |/ (__  )  / / / / / /  __/ /_/ / / /_/ /
+/_/ /_/\___/|__/|__/____/  /_/ /_/ /_/\___/\__,_/_/\__,_/
 
-
+-->
 
 
 
@@ -107,7 +97,7 @@ Running list;
 
                   <div class="news-card">
                       <!--image container -->
-                      <div class="img-card">
+                      <div class="img-ratio">
                           <div class="content">
                               <a href="http://signalnoise.com/" target="blank"><img src="../synthwave/img/test-neo.jpg" alt="SignalNoise" /></a>
                           </div>
@@ -204,40 +194,143 @@ Running list;
 
 
 
+<!--
+      _     _
+     | |   (_)
+     | |    _ _ __   ___ ______ _   _ _ __
+     | |   | | '_ \ / _ \______| | | | '_ \
+     | |___| | | | |  __/      | |_| | |_) |
+     \_____/_|_| |_|\___|       \__,_| .__/
+                                     | |
+                                     |_|
+-->
 
 
 
   <!-- ======================   Line-up   =========================== -->
 
-        <div class="row full-wrap"><!-- line-up container -->
+        <div id="line-up" class="row"><!-- line-up container -->
           <!-- TODO prefer img vs css background-img ? -->
 
-                <div class="bit-1-3-3 h-m84">Miami Nights 1984</div>
-                <div class="bit-1-3-3 h-out">The Outrunners</div>
-                <div class="bit-1-3-3 h-kaz">Kazinsky</div>
+                <div class="bit-1-3-3 aspect h-m84">Miami Nights 1984</div>
+                <div class="bit-1-3-3 aspect h-out">The Outrunners</div>
+                <div class="bit-1-3-3 aspect h-kaz">Kazinsky</div>
 
-                <div class="artist-logo">LazerHawk</div>
-                <div class="artist-logo">Com Truise</div>
-                <div class="artist-logo">College</div>
+                <div class="bit-2-4-6 aspect h-lzh">LazerHawk</div>
+                <div class="bit-2-4-6 aspect h-cts">Com Truise</div>
+                <div class="bit-2-4-6 aspect h-col">College</div>
 
-                <div class="artist-logo">Dynatron</div>
-                <div class="artist-logo">A-tease</div>
-                <div class="artist-logo">Betamaxx</div>
+                <div class="bit-2-4-6 aspect h-dyn">Dynatron</div>
+                <div class="bit-2-4-6 aspect h-ats">A-tease</div>
+                <div class="bit-2-4-6 aspect h-btm">Betamaxx</div>
 
-                <div class="artist-logo">MegaDrive</div>
-                <div class="artist-logo">The Midnight</div>
-                <div class="artist-logo">Gunship</div>
+                <div class="bit-2-4-6 aspect h-mdr">MegaDrive</div>
+                <div class="bit-2-4-6 aspect h-mid">The Midnight</div>
+                <div class="bit-2-4-6 aspect h-gun">Gunship</div>
 
-                <div class="artist-logo">FM-84</div>
-                <div class="artist-logo">Carpenter Brut</div>
-                <div class="artist-logo">Flashworx</div>
+                <div class="bit-2-4-6 aspect h-f84">FM-84</div>
+                <div class="bit-2-4-6 aspect h-cbr">Carpenter Brut</div>
+                <div class="bit-2-4-6 aspect h-fls">Flashworx</div>
 
         </div><!-- close line-up container -->
 
 
+<!--
+
+
+                   ___           ___           ___
+       ___        /\__\         /\  \         /\  \
+     /\  \      /::|  |       /::\  \       /::\  \
+     \:\  \    /:|:|  |      /:/\:\  \     /:/\:\  \
+    /::\__\  /:/|:|  |__   /::\~\:\  \   /:/  \:\  \
+ __/:/\/__/ /:/ |:| /\__\ /:/\:\ \:\__\ /:/__/ \:\__\
+/\/:/  /    \/__|:|/:/  / \/__\:\ \/__/ \:\  \ /:/  /
+\::/__/         |:/:/  /       \:\__\    \:\  /:/  /
+ \:\__\         |::/  /         \/__/     \:\/:/  /
+  \/__/         /:/  /                     \::/  /
+                \/__/                       \/__/
+
+
+
+
+-->
+
+
   <!-- ======================   Festival Info  =========================== -->
 
+<div id="info" class="row">
+      <h2>Festival Info</h2>
 
+      <div class="bit-1-2L-2L">
+            <h3>Enter the World of Synthwave</h3>
+      </div>
+
+      <div class="bit-1-2R-2R">
+            <p>For newcomers, Synth wave is a style of music that fits into the neon-noir
+              style that came out of the 1980’s and has seen a revival as of late through
+              various forms of media.  The Outrunners music festival celebrates this culture,
+              and showcases the world’s leading Dj’s and Musicians that have devoted their
+              efforts to forwarding the genre with cutting, synthesizer fueled tracks. Expect
+              to be transported back to a time when neon lights soaked the streets, where Ray
+              Bans and Walkmans were as ubiquitous as iPods, and where the music was played loud.</p>
+      </div>
+
+</div>
+
+<div id="location" class="row">
+    <h3>Location</h3>
+
+
+</div>
+
+
+<div id="map"></div><!-- google map div -->
+
+
+<div class="row spacer">
+        <div class="column bit-1-2L-2L">
+            <h3>Bayfront Park, Miami, Florida</h3>
+        </div>
+
+        <div class="column bit-1-2R-2R">
+            <p>301 Biscayne Blvd., Miami, FL 33132, United States</p>
+        </div>
+</div>
+
+<div class="row spacer">
+        <div class="column bit-1-2L-2L">
+          <h3>Dates &amp; Times</h3>
+        </div>
+
+        <div class="column bit-1-2R-2R">
+          <p>Thursday, August 31, 2017, beginning at 3:00 PM until Monday, September 4, 2017 at 6:00 AM
+          <br /><br />Concert programming will be between 3PM and 6AM, while general access to festival grounds will be 24/7.</p>
+        </div>
+</div>
+
+<div class="rules spacer row">
+    <h2 class="column">Rules</h2>
+
+    <div class="rules">
+
+          <div class="column bit-2-3-3"><div class="rules-style">General</div></div>
+          <div class="column bit-2-3-3"><div class="rules-style">Disability Access</div></div>
+          <div class="column bit-2-3-3"><div class="rules-style">Tickets</div></div>
+
+
+
+          <div class="column bit-2-3-3"><div class="rules-style">Alcohol &amp; Drugs</div></div>
+          <div class="column bit-2-3-3"><div class="rules-style">Parking</div></div>
+          <div class="column bit-2-3-3"><div class="rules-style">More</div></div>
+
+    </div>
+
+    <div class="column">
+          <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+    </div>
+
+
+</div>
 
 
   <!-- ======================   Connect  =========================== -->
@@ -257,6 +350,27 @@ Running list;
 
 <!-- ========================    JS Scripts   ===========================  -->
 
+
+
+
+        <script>
+
+              function initMap() {
+                var miami = {lat: 25.777073, lng: -80.1896337};
+                var map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 15,
+                  center: miami
+                });
+                var marker = new google.maps.Marker({
+                  position: miami,
+                  map: map
+                });
+              }
+        </script>
+
+        <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFzGpd0-8kni1-9fRo2PVM4yBNsqwNKGY&callback=initMap">
+        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
