playing with video bkgd

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ Last Updated September 21, 2016
                   <div class="social-media-svg"></div>
           </div><!-- close display-text-->
 
+          <div class="video-wrap" style="width:768px; height: 1024px;">
+              <video preload="auto" loop autoplay style="visibility=visible; width: 768px; height: 1024px">
+                  <source type="video/mp4" src="../synthwave/img/video-sample.mov" />
+              </video>
+          </div>
+
     </div><!-- close hero section tag -->
 
 
@@ -199,25 +205,17 @@ Last Updated September 21, 2016
         <div id="line-up" class="row"><!-- line-up container -->
           <!-- TODO prefer img vs css background-img ? -->
 
-                <div class="bit-1-3-3 aspect h-m84">Miami Nights 1984</div>
-                <div class="bit-1-3-3 aspect h-out">The Outrunners</div>
-                <div class="bit-1-3-3 aspect h-kaz">Kazinsky</div>
+                <div class="bit-1-2-2 aspect h-m84">Miami Nights 1984</div>
+                <div class="bit-1-2-2 aspect h-out">The Outrunners</div>
 
-                <div class="bit-2-4-6 aspect h-lzh">LazerHawk</div>
-                <div class="bit-2-4-6 aspect h-cts">Com Truise</div>
-                <div class="bit-2-4-6 aspect h-col">College</div>
+                <div class="bit-2-3-3 aspect h-kaz">Kazinsky</div>
+                <div class="bit-2-3-3 aspect h-lzh">LazerHawk</div>
+                <div class="bit-2-3-3 aspect h-cts">Com Truise</div>
 
-                <div class="bit-2-4-6 aspect h-dyn">Dynatron</div>
-                <div class="bit-2-4-6 aspect h-ats">A-tease</div>
-                <div class="bit-2-4-6 aspect h-btm">Betamaxx</div>
+                <div class="bit-2-3-3 aspect h-col">College</div>
+                <div class="bit-2-3-3 aspect h-dyn">Dynatron</div>
+                <div class="bit-2-3-3 aspect h-gun">Gunship</div>
 
-                <div class="bit-2-4-6 aspect h-mdr">MegaDrive</div>
-                <div class="bit-2-4-6 aspect h-mid">The Midnight</div>
-                <div class="bit-2-4-6 aspect h-gun">Gunship</div>
-
-                <div class="bit-2-4-6 aspect h-f84">FM-84</div>
-                <div class="bit-2-4-6 aspect h-cbr">Carpenter Brut</div>
-                <div class="bit-2-4-6 aspect h-fls">Flashworx</div>
 
         </div><!-- close line-up container -->
 
