added video, button styling

--- a/index.html
+++ b/index.html
@@ -42,40 +42,46 @@ Last Updated September 21, 2016
 <body>
 
   <!-- ======================   HEADER   =========================== -->
-    <div id="header" class="row"><!-- hero wrapper -->
+    <div id="header"><!-- hero wrapper -->
 
-          <div class="row column nav-bar"><!-- NAV container -->
+      <!--div class="container-vid">    </div-->
+          <video preload="auto" loop autoplay>
+              <source type="video/mp4" src="../synthwave/img/video-sample.mov" />
+          </video>
 
-            <!-- small 1/12(12), medium, large 1/9(12) -->
-                  <div class="logo"></div>
 
-                  <div class="menu"><!-- bit-3 = 25% -->
-                    <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
-                      <ul>
-                        <li><a href="#">News &amp; Media</a></li>
-                        <li><a href="#">Artists</a></li>
-                        <li><a href="#">Festival Info</a></li>
-                        <li><a href="#">Connect</a></li>
-                      </ul>
-                  </div>
 
-          </div><!-- close nav tag -->
+      <div class="overlay row">
 
-          <div class="row column display-text">
+                  <div class="row column nav-bar"><!-- NAV container -->
 
-                  <h1>The Outrunners</h1>
-                  <h4>The World's First Synthwave Music Festival</h4>
+                    <!-- small 1/12(12), medium, large 1/9(12) -->
+                          <div class="logo"></div>
 
-                  <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+                          <div class="menu"><!-- bit-3 = 25% -->
+                            <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
+                              <ul>
+                                <li><a href="#">News &amp; Media</a></li>
+                                <li><a href="#">Artists</a></li>
+                                <li><a href="#">Festival Info</a></li>
+                                <li><a href="#">Connect</a></li>
+                              </ul>
+                          </div>
 
-                  <div class="social-media-svg"></div>
-          </div><!-- close display-text-->
+                  </div><!-- close nav tag -->
 
-          <div class="video-wrap" style="width:768px; height: 1024px;">
-              <video preload="auto" loop autoplay style="visibility=visible; width: 768px; height: 1024px">
-                  <source type="video/mp4" src="../synthwave/img/video-sample.mov" />
-              </video>
-          </div>
+                  <div class="row column display-text">
+
+                          <h1>The Outrunners</h1>
+                          <h4>The World's First Synthwave Music Festival</h4>
+
+                          <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+
+                          <div class="social-media-svg"></div>
+                  </div><!-- close display-text-->
+
+      </div>
+
 
     </div><!-- close hero section tag -->
 
